--- a/app/layouts/head.pug
+++ b/app/layouts/head.pug
@@ -14,3 +14,4 @@ head
   link(href='assets/styles/app.min.css' rel='stylesheet')
 
   script(src='assets/scripts/libs/jquery-3.2.1.min.js')
+  script(src='assets/scripts/libs/jquery-ui.min.js')
