--- a/app/blocks/checkbox/checkbox.scss
+++ b/app/blocks/checkbox/checkbox.scss
@@ -2,6 +2,8 @@
   display: inline-block;
   cursor: pointer;
 
+  &_white .checkbox__box { background-color: #fff; }
+
   &_with_label {
     display: flex;
     align-items: center;
