--- a/app/blocks/table/table.scss
+++ b/app/blocks/table/table.scss
@@ -18,6 +18,7 @@
     margin-left: auto;
     margin-right: -6px;
     flex-shrink: 0;
+    box-shadow: inset  0 0 0 1px #fff;
 
     &_default {
       margin: 0 18px 0 0;
@@ -130,7 +131,7 @@
     a {
       color: #0353a4;
 
-      &:hover { color: #3f7fbf; }
+      &:hover { color: #f9ad1a; }
     }
 
     b { font-weight: 500; }
@@ -198,11 +199,9 @@
 
     &:last-child { margin-right: -6px; }
 
-    &_orange {
+    &:hover, &_orange, &_active {
       border-color: #f9ad1a;
       color: #f9ad1a;
     }
-
-    &:hover { opacity: .5; }
   }
 }
