--- a/app/components/clients-settings/clients-settings.scss
+++ b/app/components/clients-settings/clients-settings.scss
@@ -10,7 +10,8 @@
   &__item {
     display: flex;
     align-items: center;
-    padding: 16px 12px 16px 24px;
+    padding: 4px 12px 4px 24px;
+    min-height: 52px;
     width: 100%;
 
     &:not(:last-child) {
