--- a/app/pages/control-center/control-center.pug
+++ b/app/pages/control-center/control-center.pug
@@ -16,7 +16,7 @@ block layout-left
   +sidebar
 
 block layout-right
-  +header([{path: '#', title: 'Moscow-city', active: true}])
+  +header([{path: '#', title: 'Moscow-city', active: true}])._shadow
 
   +b.control-center
     +inner-sidebar.__sidebar
@@ -63,7 +63,7 @@ block layout-right
 
     +e.content
       +accordion
-        +accordion-item-custom
+        +accordion-item-custom.control-center__accordion-item
           +accordion-button('Штатный режим проезда').accordion__button_left.control-center__accordion-button
             +e.SPAN.heading ВН Въезд
           +accordion-content
@@ -87,51 +87,51 @@ block layout-right
           +table-header-col('Код')._width_120._align_center
           +table-header-col('Описание')._flexible
 
-        +table-row
+        +table-row.control-center__table-row
           +table-col._width_120
-            +indicators.alarms-popup__indicators
+            +indicators.control-center__indicators
               +indicator(href="#")._brown 101
           +table-col._flexible
             +table-text Нет связи с внешним ридером. Проверьте подключение, питание и работоспособность устройства.
             +button()(href='#')._grey._shadow.control-center__info-btn ?
-        +table-row
+        +table-row.control-center__table-row
           +table-col._width_120
-            +indicators.alarms-popup__indicators
+            +indicators.control-center__indicators
               +indicator(href="#")._brown 103
           +table-col._flexible
             +table-text Нет связи с внешним ридером. Проверьте подключение, питание и работоспособность устройства.
             +button()(href='#')._grey._shadow.control-center__info-btn ?
-        +table-row
+        +table-row.control-center__table-row
           +table-col._width_120
-            +indicators.alarms-popup__indicators
+            +indicators.control-center__indicators
               +indicator(href="#")._yellow 105
           +table-col._flexible
             +table-text Карты в диспенсере карт подходят к концу. Загрузите в тубус новые карты.
             +button()(href='#')._grey._shadow.control-center__info-btn ?
-        +table-row
+        +table-row.control-center__table-row
           +table-col._width_120
-            +indicators.alarms-popup__indicators
+            +indicators.control-center__indicators
               +indicator(href="#")._yellow 112
           +table-col._flexible
             +table-text Верхняя дверь открыта
             +button()(href='#')._grey._shadow.control-center__info-btn ?
-        +table-row
+        +table-row.control-center__table-row
           +table-col._width_120
-            +indicators.alarms-popup__indicators
+            +indicators.control-center__indicators
               +indicator(href="#")._yellow 105
           +table-col._flexible
             +table-text Карты в диспенсере карт подходят к концу. Загрузите в тубус новые карты.
             +button()(href='#')._grey._shadow.control-center__info-btn ?
-        +table-row
+        +table-row.control-center__table-row
           +table-col._width_120
-            +indicators.alarms-popup__indicators
+            +indicators.control-center__indicators
               +indicator(href="#")._red 305
           +table-col._flexible
             +table-text Карты в диспенсере карт подходят к концу. Загрузите в тубус новые карты.
             +button()(href='#')._grey._shadow.control-center__info-btn ?
-        +table-row
+        +table-row.control-center__table-row
           +table-col._width_120
-            +indicators.alarms-popup__indicators
+            +indicators.control-center__indicators
               +indicator(href="#")._yellow 105
           +table-col._flexible
             +table-text Карты в диспенсере карт подходят к концу. Загрузите в тубус новые карты.
