--- a/app/blocks/notification-info/notification-info.pug
+++ b/app/blocks/notification-info/notification-info.pug
@@ -7,9 +7,11 @@ mixin notification-info()
     +icon-button('icon-caret')(href='#')._shadow._uppercase.__expand Развернуть
 
 mixin notification-info-indicator(done)
-  +e.A(href='#').indicator&attributes(attributes)
-    if done
+  if done
+    +e.A(href='#').indicator._done&attributes(attributes)
       +icon('icon-accept').done
+  else
+    +e.A(href='#').indicator&attributes(attributes)
 
 mixin notification-info-col()
   +e.col&attributes(attributes)
