--- a/app/blocks/popup/popup.scss
+++ b/app/blocks/popup/popup.scss
@@ -34,7 +34,6 @@
     height: 100%;
     box-shadow: -2px 0 4px rgba(0, 0, 0, .5);
     background-color: #fff;
-    overflow-y: scroll;
     will-change: transform;
     transform: translate3d(100%, 0, 0);
     transition: transform .25s ease-in-out;
@@ -44,6 +43,7 @@
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid #d2d3d3;
+    background-color: #fff;
     flex-shrink: 0;
   }
 
@@ -72,5 +72,6 @@
     display: block;
     width: 100%;
     height: 100%;
+    overflow-y: scroll;
   }
 }
