--- a/app/components/search-bar/search-bar.scss
+++ b/app/components/search-bar/search-bar.scss
@@ -51,6 +51,12 @@
     background-color: white;
     border: 1px solid #d2d3d3;
     border-radius: 3px;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    will-change: border-color, box-shadow;
+    transition: box-shadow .25s ease-in-out, border-color .25s ease-in-out;
+
+    &:hover, &.focus { border-color: #f9ad1a; }
+    &.focus { box-shadow: 0 0 4px rgba(249, 173, 26, .5); }
 
     .search-bar {
 
