--- a/app/components/clients-popup/clients-popup.pug
+++ b/app/components/clients-popup/clients-popup.pug
@@ -14,7 +14,7 @@ include ../mifare-popup/mifare-popup
 mixin clients-popup()
   +popup#clients-popup
     +popup-header('Сбербанк')
-    +popup-body
+    +popup-body._scrolless
       +b.clients-popup
         +inner-sidebar.__sidebar
           +inner-sidebar-item._menu
