--- a/app/blocks/popup/popup.scss
+++ b/app/blocks/popup/popup.scss
@@ -5,7 +5,7 @@
   transform: translate3d(0, 0, 0);
   display: none;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, .7);
   z-index: 70;
 
@@ -25,13 +25,13 @@
     display: flex;
     justify-content: flex-end;
     width: 100%;
-    height: 100%;
+    height: 100vh;
   }
 
   &__content {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
     box-shadow: -2px 0 4px rgba(0, 0, 0, .5);
     background-color: #fff;
     will-change: transform;
@@ -73,5 +73,9 @@
     width: 100%;
     height: 100%;
     overflow-y: scroll;
+
+    &_scrolless {
+      overflow: initial;
+    }
   }
 }
