--- a/app/components/clients-common-info/clients-common-info.scss
+++ b/app/components/clients-common-info/clients-common-info.scss
@@ -5,7 +5,19 @@ $labelMgr: 10px; // margin right
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 17px 157px 15px 17px;
+  height: 100%;
+  padding-top: 17px;
+  padding-bottom: 15px;
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    padding-right: 157px;
+    padding-left: 15px;
+    width: 100%;
+    height: 80vh;
+    overflow-y: auto;
+  }
 
   &__fieldset {
     border: 0;
@@ -13,6 +25,10 @@ $labelMgr: 10px; // margin right
 
     &:not(:first-child) {
       margin-top: 41px;
+    }
+
+    .field__content {
+      width: 340px;
     }
   }
 
@@ -33,7 +49,15 @@ $labelMgr: 10px; // margin right
 
   &__save-button {
     margin-top: auto;
-    padding-left: $labelWidth + $labelMgr;
-    padding-top: 10px;
+    padding-left: $labelWidth + $labelMgr + 17px;
+    padding-top: 15px;
+    width: 340px;
+    box-sizing: content-box;
+
+    .button {
+      width: 100%;
+      justify-content: center;
+      box-sizing: border-box;
+    }
   }
 }
