--- a/app/components/clients-settings/clients-settings.scss
+++ b/app/components/clients-settings/clients-settings.scss
@@ -13,6 +13,7 @@
     padding: 4px 12px 4px 24px;
     min-height: 52px;
     width: 100%;
+    background-color: #fff;
 
     &:not(:last-child) {
       border-bottom: 1px solid #d2d3d3;
