--- a/app/components/individual-info/individual-info.scss
+++ b/app/components/individual-info/individual-info.scss
@@ -3,11 +3,16 @@
   min-width: 669px;
   background-color: #f7f7f7;
 
+  &__accordion-item:last-child {
+    .accordion__button { box-shadow: none; }
+  }
+
   &__search-bar {
 
     &_add-ts {
+      height: 48px;
       padding-top: 0;
-      margin-top: -8px;
+      margin-top: -23px;
     }
   }
 
@@ -16,6 +21,7 @@
     justify-content: space-between;
     width: 100%;
     height: 48px;
+    border-bottom: 1px solid #d2d3d3;
   }
 
   &__tabs {
@@ -28,17 +34,23 @@
   }
 
   &__action {
-    margin-right: 17px;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    padding: 0 16px;
+    border-left: 1px solid #d2d3d3;
+
+    &:hover .individual-info__icon-trash { opacity: .75; }
   }
 
   &__content {
     padding-top: 23px;
-    padding-bottom: 45px;
   }
 
   &__fields {
     padding-left: 0;
     padding-right: 157px;
+    padding-bottom: 45px;
   }
 
   &__icon-trash {
@@ -46,7 +58,5 @@
     height: 18px;
     fill: #ed6469;
     transition: opacity .25s ease-in-out;
-
-    &:hover { opacity: .75; }
   }
 }
