--- a/app/components/search-bar-add/search-bar-add.scss
+++ b/app/components/search-bar-add/search-bar-add.scss
@@ -1,4 +1,6 @@
 .search-bar-add {
+  position: relative;
+  z-index: 1;
   display: flex;
   padding: 8px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
