--- a/app/components/qr-codes/qr-codes.scss
+++ b/app/components/qr-codes/qr-codes.scss
@@ -1,3 +1,15 @@
 .qr-codes {
   min-width: 669px;
+  height: 100%;
+
+  &__action-header { border-top: 0; }
+
+  &__accordion {
+    height: 100%;
+    overflow-y: scroll;
+  }
+
+  &__accordion-item:last-child {
+    .accordion__button { box-shadow: none; }
+  }
 }
