--- a/app/blocks/default-table/default-table.scss
+++ b/app/blocks/default-table/default-table.scss
@@ -16,6 +16,7 @@
     font-size: 14px;
     font-weight: 400;
     padding: 8px 0;
+    min-height: 48px;
 
     &_width_90 { width: 90px; }
     &_width_100 { width: 100px; }
