--- a/app/components/mifare-card-info/mifare-card-info.scss
+++ b/app/components/mifare-card-info/mifare-card-info.scss
@@ -1,12 +1,17 @@
 .mifare-card-info {
   display: flex;
   flex-direction: column;
-  align-items: center;
   width: 100%;
-  padding: 15px;
+  height: 100%;
+  padding-bottom: 15px;
 
   &__fields {
     display: block;
+    max-height: 80vh;
+    overflow-y: auto;
+    padding-top: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 
   &__label {
@@ -25,6 +30,13 @@
   &__button-wrap {
     margin-top: auto;
     padding-top: 20px;
-    width: 360px;
+    padding-left: 148px;
+    width: 320px;
+    box-sizing: content-box;
+
+    .button {
+      width: 100%;
+      box-sizing: border-box;
+    }
   }
 }
