--- a/app/components/mifare-cards/mifare-cards.scss
+++ b/app/components/mifare-cards/mifare-cards.scss
@@ -2,7 +2,14 @@
   display: block;
   min-width: 669px;
 
-  &__content {
-    padding: 0 17px;
+  &__row {
+    height: 48px;
+    border-bottom: 1px solid #d2d3d3;
+  }
+
+  &__cell {
+
+    &:first-child { padding-left: 17px; }
+    &:last-child { padding-right: 17px; }
   }
 }
