--- a/app/components/session-detail/session-detail.scss
+++ b/app/components/session-detail/session-detail.scss
@@ -4,14 +4,16 @@
   min-height: 339px;
   box-shadow: 0 1px 0 #d2d3d3, inset 0 1px 2px rgba(0, 0, 0, .1);
   background-color: #efefef;
-  padding: 13px 17px;
+  padding: 0 17px;
 
   &__block {
+    padding-top: 13px;
     width: 50%;
     flex-shrink: 0;
+    border-right: 1px solid #d2d3d3;
 
     &:last-child {
-      margin-left: 45px;
+      border-right: 0;
     }
   }
 
@@ -20,18 +22,21 @@
     font-size: 16px;
     font-weight: 500;
     text-align: center;
+    border-bottom: 1px solid #d2d3d3;
+    padding-bottom: 12px;
   }
 
   &__body {
     display: flex;
 
     &_photos {
-      margin-top: 40px;
+      margin-top: 28px;
       justify-content: space-between;
+      margin-right: 40px;
     }
 
     &_status {
-      margin-top: 25px;
+      margin-top: 8px;
       flex-direction: column;
     }
   }
@@ -44,8 +49,14 @@
     }
   }
 
-  &__status:not(:last-child) {
-    margin-bottom: 13px;
+  &__status {
+    border-bottom: 1px solid #d2d3d3;
+    padding-left: 25px;
+    padding-bottom: 8px;
+
+    &:not(:last-child) {
+      margin-bottom: 8px;
+    }
   }
 }
 
