--- a/app/pages/blacklist/blacklist.scss
+++ b/app/pages/blacklist/blacklist.scss
@@ -10,6 +10,7 @@
       .blacklist__remove-btn {
         opacity: 1;
         pointer-events: all;
+        box-shadow: inset  0 0 0 1px #fff;
       }
     }
   }
