--- a/app/blocks/inner-sidebar/inner-sidebar.scss
+++ b/app/blocks/inner-sidebar/inner-sidebar.scss
@@ -11,6 +11,14 @@
     overflow-y: auto;
   }
 
+  &__group {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+  }
+
   &__item {
     display: block;
     padding: 20px 13px 20px 22px;
