--- a/app/blocks/layout/layout.scss
+++ b/app/blocks/layout/layout.scss
@@ -26,5 +26,11 @@
   &__right {
     flex: 1;
     overflow: hidden;
+
+    &_scrollless {
+      flex: none;
+      width: 100%;
+      height: 100vh;
+    }
   }
 }
