--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -6,6 +6,8 @@
   background-color: #f7f7f7;
   height: 48px;
 
+  &_border-bottom { border-bottom: 1px solid #d2d3d3; }
+
   &_shadow {
     box-shadow: 0 1px 2px rgba(211, 211, 211, .75);
   }
