--- a/app/components/clients-common-info/clients-common-info.scss
+++ b/app/components/clients-common-info/clients-common-info.scss
@@ -7,7 +7,6 @@ $labelMgr: 10px; // margin right
   width: 100%;
   height: 100%;
   padding-top: 17px;
-  padding-bottom: 15px;
 
   &__content {
     display: flex;
@@ -15,7 +14,7 @@ $labelMgr: 10px; // margin right
     padding-right: 157px;
     padding-left: 15px;
     width: 100%;
-    height: 80vh;
+    height: 100%;
     overflow-y: auto;
   }
 
@@ -51,6 +50,7 @@ $labelMgr: 10px; // margin right
     margin-top: auto;
     padding-left: $labelWidth + $labelMgr + 17px;
     padding-top: 15px;
+    padding-bottom: 15px;
     width: 340px;
     box-sizing: content-box;
 
@@ -58,6 +58,7 @@ $labelMgr: 10px; // margin right
       width: 100%;
       justify-content: center;
       box-sizing: border-box;
+      margin-bottom: 15px;
     }
   }
 }
