--- a/app/components/mifare-cards/mifare-cards.scss
+++ b/app/components/mifare-cards/mifare-cards.scss
@@ -2,6 +2,8 @@
   display: block;
   min-width: 669px;
 
+  &__content { overflow-y: auto; }
+
   &__row {
     height: 48px;
     border-bottom: 1px solid #d2d3d3;
