--- a/app/components/mifare-card-info/mifare-card-info.scss
+++ b/app/components/mifare-card-info/mifare-card-info.scss
@@ -3,7 +3,6 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  padding-bottom: 15px;
 
   &__fields {
     display: block;
@@ -30,13 +29,14 @@
   &__button-wrap {
     margin-top: auto;
     padding-top: 20px;
-    padding-left: 148px;
+    padding-left: 166px;
     width: 320px;
     box-sizing: content-box;
 
     .button {
       width: 100%;
       box-sizing: border-box;
+      margin-bottom: 15px;
     }
   }
 }
