--- a/app/blocks/select/select.scss
+++ b/app/blocks/select/select.scss
@@ -59,6 +59,7 @@
     color: #242529;
     font-size: 14px;
     font-weight: 400;
+    background-color: inherit;
 
     &::-ms-expand {
       display: none;
