--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -3,6 +3,8 @@
   display: flex;
   align-items: center;
   padding: 10px 16px;
+  transition: all .25s esae-in-out;
+  box-shadow: inset 0 1px 0 #fff;
 
   &_uppercase {
     text-transform: uppercase;
@@ -43,7 +45,7 @@
     border: 1px solid #d2d3d3;
     background-color: #f6f6f6;
 
-    &:hover { box-shadow: 0 2px 4px rgba(0, 0, 0, .1), inset 0 2px 0 #fff; }
+    &:hover { box-shadow: 0 2px 4px rgba(0, 0, 0, .1), inset 0 1px 0 #fff; }
   }
 
   &_orange {
