--- a/app/blocks/icon-button/icon-button.scss
+++ b/app/blocks/icon-button/icon-button.scss
@@ -8,14 +8,15 @@
   padding: 9px;
   min-height: 40px;
   cursor: pointer;
+  box-shadow: inset 0 1px 0 #fff;
 
   &_uppercase {
     text-transform: uppercase;
   }
 
   &:hover {
-    background-color: white;
     color: #555;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .1), inset 0 1px 0 #fff;
 
     .icon-button__icon { fill: #555; }
   }
