--- a/app/blocks/partial-button/partial-button.scss
+++ b/app/blocks/partial-button/partial-button.scss
@@ -1,6 +1,8 @@
 .partial-button {
   display: flex;
   cursor: pointer;
+  transition: all .25s esae-in-out;
+  box-shadow: inset 0 1px 0 #fff;
 
   &__part {
     display: flex;
