--- a/app/blocks/table/table.scss
+++ b/app/blocks/table/table.scss
@@ -81,9 +81,17 @@
       flex-direction: column;
     }
 
+    &_parent {
+      box-shadow: 0 1px 0 #d2d3d3, inset 0 1px 2px rgba(0, 0, 0, .1);
+    }
+
     &_children {
       display: none;
     }
+
+    &_lvl_1 { background-color: #efefef !important; }
+
+    &_lvl_2 { background-color: #f6f6f6 !important; }
 
     &:nth-of-type(odd) {
       .table__row_main { background-color: #f9f9f9; }
