--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -1,4 +1,4 @@
-extends ../../layouts/default
+extends ../../layouts/custom-scroll
 include ../../blocks/button/button
 include ../../blocks/icon-button/icon-button
 include ../../components/search-bar/search-bar
@@ -44,7 +44,7 @@ block layout-right
       +actions-header-col
         +button(href='#')._uppercase._grey Удалить Физ. лицо
 
-    +table()
+    +table().__table
       +table-header
         +table-header-col('Клиент')._flexible
           +table-filter-button А-Я
@@ -202,7 +202,7 @@ block layout-right
             +table-col._width_260
           +table-row._children
             +table-row._parent
-              +table-row._main
+              +table-row._main._lvl_1
                 +table-col._flexible._nowrap
                   +icon('icon-person').icon._person
                   +checkbox('row', 'value')._white.__checkbox
@@ -227,7 +227,7 @@ block layout-right
                     +table-text._size_small 12:14:32
                 +table-col._width_260
               +table-row._children
-                +table-row._main._left_padding
+                +table-row._main._left_padding._lvl_2
                   +table-col._flexible._nowrap
                     +icon('icon-card').icon._card
                     +checkbox('row', 'value')._white.__checkbox
@@ -240,7 +240,7 @@ block layout-right
                   +table-col._width_100._align_center
                   +table-col._width_200
                   +table-col._width_260
-                +table-row._main._left_padding
+                +table-row._main._left_padding._lvl_2
                   +table-col._flexible._nowrap
                     +icon('icon-card').icon._card
                     +checkbox('row', 'value')._white.__checkbox
@@ -254,7 +254,7 @@ block layout-right
                   +table-col._width_200
                   +table-col._width_260
             +table-row._parent
-              +table-row._main
+              +table-row._main._lvl_1
                 +table-col._flexible._nowrap
                   +icon('icon-person').icon._person
                   +checkbox('row', 'value')._white.__checkbox
@@ -279,7 +279,7 @@ block layout-right
                     +table-text._size_small 12:14:32
                 +table-col._width_260
               +table-row._children
-                +table-row._main._left_padding
+                +table-row._main._left_padding._lvl_2
                   +table-col._flexible._nowrap
                     +icon('icon-card').icon._card
                     +checkbox('row', 'value')._white.__checkbox
@@ -292,7 +292,7 @@ block layout-right
                   +table-col._width_100._align_center
                   +table-col._width_200
                   +table-col._width_260
-                +table-row._main._left_padding
+                +table-row._main._left_padding._lvl_2
                   +table-col._flexible._nowrap
                     +icon('icon-card').icon._card
                     +checkbox('row', 'value')._white.__checkbox
@@ -306,7 +306,7 @@ block layout-right
                   +table-col._width_200
                   +table-col._width_260
             +table-row._parent
-              +table-row._main._left_padding
+              +table-row._main._left_padding._lvl_1
                 +table-col._flexible._nowrap
                   +checkbox('row', 'value')._white.__checkbox
                   +table-text
@@ -330,7 +330,7 @@ block layout-right
                     +table-text._size_small 12:14:32
                 +table-col._width_260
               +table-row._children
-                +table-row._main._left_padding
+                +table-row._main._left_padding._lvl_2
                   +table-col._flexible._nowrap
                     +icon('icon-card').icon._card
                     +checkbox('row', 'value')._white.__checkbox
@@ -343,7 +343,7 @@ block layout-right
                   +table-col._width_100._align_center
                   +table-col._width_200
                   +table-col._width_260
-                +table-row._main._left_padding
+                +table-row._main._left_padding._lvl_2
                   +table-col._flexible._nowrap
                     +icon('icon-card').icon._card
                     +checkbox('row', 'value')._white.__checkbox
