--- a/app/components/clients-common-info/clients-common-info.pug
+++ b/app/components/clients-common-info/clients-common-info.pug
@@ -4,7 +4,7 @@ include ../../blocks/button/button
 include ../../components/counter/counter
 
 mixin clients-common-info()
-  +b.FORN.clients-common-info&attributes(attributes)
+  +b.FORM.clients-common-info&attributes(attributes)
     +e.content
       +e.FIELDSET.fieldset
         +e.LEGEND.heading Данные о компании
