--- a/app/blocks/table/table.scss
+++ b/app/blocks/table/table.scss
@@ -81,12 +81,10 @@
       flex-direction: column;
     }
 
-    &_parent {
-      box-shadow: 0 1px 0 #d2d3d3, inset 0 1px 2px rgba(0, 0, 0, .1);
-    }
-
     &_children {
       display: none;
+
+      .table__row_main { border-top: 1px solid #d2d3d3; }
     }
 
     &_lvl_1 { background-color: #efefef !important; }
