--- a/app/components/clients-common-info/clients-common-info.scss
+++ b/app/components/clients-common-info/clients-common-info.scss
@@ -6,40 +6,46 @@ $labelMgr: 10px; // margin right
   flex-direction: column;
   width: 100%;
   height: 100%;
-  padding-top: 17px;
 
   &__content {
     display: flex;
     flex-direction: column;
-    padding-right: 157px;
-    padding-left: 15px;
     width: 100%;
-    height: 100%;
     overflow-y: auto;
   }
 
   &__fieldset {
     border: 0;
     display: block;
+    margin-top: 41px;
 
-    &:not(:first-child) {
-      margin-top: 41px;
+    &:first-child {
+      margin-top: 0;
+
+      .clients-common-info__heading { border-top: 0; }
     }
 
-    .field__content {
-      width: 340px;
+    .field {
+      padding-left: 15px;
+      padding-right: 15px;
+
+      &__content {
+        width: 340px;
+      }
     }
   }
 
   &__heading {
     display: block;
-    margin-bottom: 47px;
-    padding-left: $labelWidth + $labelMgr;
+    margin-bottom: 30px;
+    padding: 17px 15px;
     width: 100%;
     color: #202325;
     font-size: 16px;
     font-weight: 400;
     text-align: center;
+    border-bottom: 1px solid #d2d3d3;
+    border-top: 1px solid #d2d3d3;
   }
 
   &__label {
@@ -47,10 +53,9 @@ $labelMgr: 10px; // margin right
   }
 
   &__save-button {
-    margin-top: auto;
     padding-left: $labelWidth + $labelMgr + 17px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 12px;
+    padding-bottom: 12px;
     width: 340px;
     box-sizing: content-box;
 
@@ -58,7 +63,6 @@ $labelMgr: 10px; // margin right
       width: 100%;
       justify-content: center;
       box-sizing: border-box;
-      margin-bottom: 15px;
     }
   }
 }
