--- a/app/components/session-detail/session-detail.scss
+++ b/app/components/session-detail/session-detail.scss
@@ -4,7 +4,6 @@
   min-height: 339px;
   box-shadow: 0 1px 0 #d2d3d3, inset 0 1px 2px rgba(0, 0, 0, .1);
   background-color: #efefef;
-  padding: 0 17px;
 
   &__block {
     padding-top: 13px;
@@ -33,6 +32,8 @@
       margin-top: 28px;
       justify-content: space-between;
       margin-right: 40px;
+      padding-left: 17px;
+      padding-right: 17px;
     }
 
     &_status {
@@ -51,7 +52,8 @@
 
   &__status {
     border-bottom: 1px solid #d2d3d3;
-    padding-left: 25px;
+    padding-left: 42px;
+    padding-right: 17px;
     padding-bottom: 8px;
 
     &:not(:last-child) {
