--- a/app/components/qr-codes/qr-codes.pug
+++ b/app/components/qr-codes/qr-codes.pug
@@ -19,8 +19,8 @@ mixin qr-codes()
         +accordion-item('QR-Код #1, скидка 100р.').qr-codes__accordion-item
           +qr-form.__form
             +e.col
-              +button.BUTTON._text_grey._uppercase.__button Сохранить
+              +button.BUTTON._text_green._uppercase.__button Сохранить
             +e.col
-              +button.BUTTON._text_green._uppercase.__button_big Сохранить как шаблон
+              +button.BUTTON._text_grey._uppercase.__button_big Сохранить как шаблон
             +e.col
               +button.BUTTON._text_red._uppercase.__button Удалить
