--- a/app/components/qr-codes-templates/qr-codes-templates.pug
+++ b/app/components/qr-codes-templates/qr-codes-templates.pug
@@ -19,6 +19,6 @@ mixin qr-codes-templates()
             +accordion-item('QR-Код #1, скидка 100р.', { name: 'name', value: 'value', label: 'Выбрать'})
               +qr-form
                 +e.col
-                  +button.BUTTON._text_grey._uppercase.__button Сохранить
+                  +button.BUTTON._text_green._uppercase.__button Сохранить
                 +e.col
                   +button.BUTTON._text_red._uppercase.__button Удалить
