--- a/app/blocks/transaction/transaction.scss
+++ b/app/blocks/transaction/transaction.scss
@@ -2,8 +2,7 @@
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  width: 654px;
-  height: 280px;
+  min-height: 280px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
   border-radius: 3px;
   border: 1px solid #d2d3d3;
